# rust-go-binding

./: Cargo.toml  Makefile  README.md  header.h  librustcbinding.d  librustcbinding.dylib  librustcbinding.rlib
go/: go.mod  main.go
src/: lib.rs
